--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "debug": "~2.6.9",
     "express": "^4.16.4",
     "express-handlebars": "^3.1.0",
+    "handlebars": "^4.1.2",
     "hbs": "~4.0.4",
     "http-errors": "^1.6.3",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
     "mongoose": "^5.6.1",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.9.1"
